...
            android:text="FOLLOWED"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tab_myposts"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@id/category_tabs"
        tools:layout_editor_absoluteX="125dp" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="60dp"
...
